# sailboat-physics

./: Cargo.toml  README.md
examples/: ui.rs  vectors.rs
src/: aerodynamics.rs  geometry.rs  goemetry.rs  lib.rs  vector.rs
ui/: Cargo.toml
ui/src/: main.rs  mqh.rs
